objects/ccrz__E_OrderItem__c.object
<CustomObject>
    <description>The E_OrderItem__c object contains the line level detail of placed orders.</description>
    <fields>
        <fullName>Activation_Key_Generated__c</fullName>
        <label>Activation Key Generated</label>
        <summaryFilterItems>
            <field>OSM_Order_Item_License__c.Activation_Key__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>OSM_Order_Item_License__c.CC_Order_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Basic_Remaining_Lisences__c</fullName>
        <formula>IF(CONTAINS($Label.SES_OMSCreateOrder_SubscriptionProduct_List,  ccrz__Product__r.ccrz__SKU__c ) , 

IF(CONTAINS($Label.SES_OMSCreateOrder_SubscriptionProduct_List_AddOns, ccrz__Product__r.ccrz__SKU__c), 

IF(Number_of_Bundles__c &gt; 0,(MCEILING(ccrz__OriginalQuantity__c)*Number_of_Bundles__c ) - (Basic_Tool_Instance_Key_Count__c+OSM_SW_Revoked_Basic_Key_Count__c), MCEILING(ccrz__OriginalQuantity__c) - (Basic_Tool_Instance_Key_Count__c+OSM_SW_Revoked_Basic_Key_Count__c)),IF(CONTAINS($Label.OMS_ProductList_NonInsite,ccrz__Product__r.ccrz__SKU__c),Number_of_Bundles__c - (Basic_Tool_Instance_Key_Count__c+OSM_SW_Revoked_Basic_Key_Count__c),MCEILING(ccrz__OriginalQuantity__c)-(Basic_Tool_Instance_Key_Count__c+OSM_SW_Revoked_Basic_Key_Count__c)) ) 
, 
Number_of_Bundles__c - (Basic_Tool_Instance_Key_Count__c+OSM_SW_Revoked_Basic_Key_Count__c))







/*MCEILING(ccrz__OriginalQuantity__c) - (Basic_Tool_Instance_Key_Count__c+OSM_SW_Revoked_Basic_Key_Count__c)*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Basic Remaining Lisences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Basic_Tool_Instance_Key_Count__c</fullName>
        <label>Basic Tool Instance Key Count</label>
        <summaryFilterItems>
            <field>OSM_Order_Item_License__c.Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OSM_Order_Item_License__c.Tool_Instance_Key__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OSM_Order_Item_License__c.Type__c</field>
            <operation>equals</operation>
            <value>Basic</value>
        </summaryFilterItems>
        <summaryForeignKey>OSM_Order_Item_License__c.CC_Order_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <formula>ccrz__SubProdTerm__r.Billing_Display_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>CC Order Items (CC Order)</relationshipLabel>
        <relationshipName>CC_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMI_Account_Number__c</fullName>
        <formula>ccrz__Order__r.ccrz__Account__r.CMI_Account_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMI Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelLicenseAPICalled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CancelLicenseAPICalled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CancelledBy__c</fullName>
        <formula>IF( Cancelled_By__c != null,  Cancelled_By__r.FirstName + &apos; &apos;+ Cancelled_By__r.LastName , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CancelledBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancelled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CC_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Detail</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CC Order Items</relationshipLabel>
        <relationshipName>CC_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_IAM_Cummins_login_ID__c</fullName>
        <formula>ccrz__Order__r.ccrz__Contact__r.Username__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact IAM Cummins login ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <formula>ccrz__Order__r.ccrz__Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_Quantity__c</fullName>
        <formula>if( NOT(ISNULL(ccrz__Coupon__r.ccrz__TargetQty__c)),ccrz__Coupon__r.ccrz__TargetQty__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coupon Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Subscription_Cancellation_Status__c</fullName>
        <label>DA Subscription Cancellation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partially Cancelled</fullName>
                </value>
                <value>
                    <fullName>Partial Cancellation Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DA_Subscription_Cancelled_Quantity__c</fullName>
        <label>DA Subscription Cancelled Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DBU_Original_Order_Item_Total__c</fullName>
        <formula>ccrz__OriginalItemPrice__c * ccrz__OriginalQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DBU Original Order Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Revoke__c</fullName>
        <label>Date Revoke</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Discounted_Amount__c</fullName>
        <formula>Original_Price_without_Discount__c  - ccrz__SubAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discounted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dn_Price__c</fullName>
        <label>Dn Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <formula>TEXT(ccrz__Product__r.Group_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance_ID_Count__c</fullName>
        <label>Instance ID Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsCancelPending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCancelPending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInvoiceRefund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsInvoiceRefund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRefundSubmitOrder_Done_for_FW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRefundSubmitOrder Done for FW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRevokeLicenseSucess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRevokeLicenseSucess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Addon_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Addon Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_FW_OrderItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is FW OrderItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_IAM_Provision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is IAM Provision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Refund_Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Refund Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Reissued_Keys__c</fullName>
        <label>Is Reissued Keys</label>
        <summaryFilterItems>
            <field>OSM_Order_Item_License__c.Status__c</field>
            <operation>equals</operation>
            <value>ReIssued</value>
        </summaryFilterItems>
        <summaryForeignKey>OSM_Order_Item_License__c.CC_Order_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Revoked_Keys__c</fullName>
        <label>Is Revoked Keys</label>
        <summaryFilterItems>
            <field>OSM_Order_Item_License__c.Status__c</field>
            <operation>equals</operation>
            <value>Revoked</value>
        </summaryFilterItems>
        <summaryForeignKey>OSM_Order_Item_License__c.CC_Order_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Revoked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Revoked ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Bundles__c</fullName>
        <label>Number of Bundles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Counts__c</fullName>
        <label>Number of Counts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OMS_Activation_Key_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OMS Activation Key Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OMS_Activation_Key__c</fullName>
        <label>OMS Activation Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Instance_ID__c</fullName>
        <label>OMS Instance ID</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OMS_Item_ID__c</fullName>
        <label>OMS Item ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Order_ID__c</fullName>
        <label>OMS Order ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OMS Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSMCancelstatus__c</fullName>
        <label>CancelLicenseStatus</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Coupon_Target_Quantity__c</fullName>
        <description>Mar-1266</description>
        <label>OSM Coupon Target Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSM_GetTI_Called__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSM_GetTI Called</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_GetTI_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSM GetTI Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_Is_Refund_Intercompany_Call_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSM Is Refund Intercompany Call Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_Renew_Subscription_End_Date__c</fullName>
        <label>Renew Subscription End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OSM_Renew_Subscription_Start_Date__c</fullName>
        <label>Renew Subscription Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OSM_Revocation_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSM Revocation Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Basic_Revocation_Pending__c</fullName>
        <label>Basic Revocation Pending</label>
        <summaryFilterItems>
            <field>OSM_Order_Item_License__c.Status__c</field>
            <operation>equals</operation>
            <value>Revoke Intitiated</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OSM_Order_Item_License__c.Type__c</field>
            <operation>equals</operation>
            <value>Basic</value>
        </summaryFilterItems>
        <summaryForeignKey>OSM_Order_Item_License__c.CC_Order_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Cancel_By_User_Type__c</fullName>
        <label>Cancel By User Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Cancel_Comment__c</fullName>
        <label>Cancel Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Common_Revoke_Item__c</fullName>
        <formula>IF( OSM_SW_Non_Insite_OSM_Product__c , OSM_SW_Revoked_Functional_Key_Count__c, 

MIN(OSM_SW_Revoked_Basic_Key_Count__c,OSM_SW_Revoked_Functional_Key_Count__c) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Common Revoke Item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Coupon_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coupon Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Distributor_Account_Name__c</fullName>
        <label>Distributor Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Functional_Revocation_Pending__c</fullName>
        <label>Functional Revocation Pending</label>
        <summaryFilterItems>
            <field>OSM_Order_Item_License__c.Status__c</field>
            <operation>equals</operation>
            <value>Revoke Intitiated</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OSM_Order_Item_License__c.Type__c</field>
            <operation>equals</operation>
            <value>Functional</value>
        </summaryFilterItems>
        <summaryForeignKey>OSM_Order_Item_License__c.CC_Order_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Get_Order_success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Order success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_Included_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Included Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_OMS_Revoke_and_Cancel_Not_Done__c</fullName>
        <formula>IF( OMS_Product__c,

IF(

OSM_GetTI_Success__c &amp;&amp; (


(Tool_Instance_Count__c == 0 &amp;&amp; Basic_Tool_Instance_Key_Count__c==0 &amp;&amp; CancelLicenseAPICalled__c &amp;&amp; OSM_SW_Revoked_Basic_Key_Count__c ==0 &amp;&amp; OSM_SW_Revoked_Functional_Key_Count__c == 0)
||
(Tool_Instance_Count__c == 0 &amp;&amp; Basic_Tool_Instance_Key_Count__c==0 &amp;&amp; IsRevokeLicenseSucess__c &amp;&amp; OSM_SW_Revoked_Basic_Key_Count__c == MCEILING(ccrz__OriginalQuantity__c) &amp;&amp; !OSM_SW_Non_Insite_OSM_Product__c &amp;&amp; OSM_SW_Revoked_Functional_Key_Count__c == MCEILING(ccrz__OriginalQuantity__c ))
||
(Tool_Instance_Count__c == 0 &amp;&amp; Basic_Tool_Instance_Key_Count__c==0 &amp;&amp; IsRevokeLicenseSucess__c &amp;&amp; (OSM_SW_Revoked_Basic_Key_Count__c == MCEILING(ccrz__OriginalQuantity__c) || OSM_SW_Non_Insite_OSM_Product__c) &amp;&amp; OSM_SW_Revoked_Functional_Key_Count__c == MCEILING(Number_of_Bundles__c ))
||
(Tool_Instance_Count__c == 0 &amp;&amp; Basic_Tool_Instance_Key_Count__c==0 &amp;&amp; IsRevokeLicenseSucess__c &amp;&amp; CancelLicenseAPICalled__c &amp;&amp; (OSM_SW_Revoked_Basic_Key_Count__c != MCEILING(ccrz__OriginalQuantity__c) || OSM_SW_Non_Insite_OSM_Product__c) &amp;&amp; OSM_SW_Revoked_Functional_Key_Count__c != MCEILING(Number_of_Bundles__c ))
||
(Tool_Instance_Count__c == 0 &amp;&amp; Basic_Tool_Instance_Key_Count__c==0 &amp;&amp; IsRevokeLicenseSucess__c &amp;&amp; CancelLicenseAPICalled__c)
),

false, true)





,false)




/*
IF( OMS_Product__c &amp;&amp; !isRenew__c,

IF(

OSM_GetTI_Success__c &amp;&amp; (


(Tool_Instance_Count__c == 0 &amp;&amp; Basic_Tool_Instance_Key_Count__c==0 &amp;&amp; CancelLicenseAPICalled__c &amp;&amp; OSM_SW_Revoked_Basic_Key_Count__c ==0 &amp;&amp; OSM_SW_Revoked_Functional_Key_Count__c == 0)
||
(Tool_Instance_Count__c == 0 &amp;&amp; Basic_Tool_Instance_Key_Count__c==0 &amp;&amp; IsRevokeLicenseSucess__c &amp;&amp; (OSM_SW_Revoked_Basic_Key_Count__c == MCEILING(ccrz__OriginalQuantity__c) || OSM_SW_Non_Insite_OSM_Product__c) &amp;&amp; OSM_SW_Revoked_Functional_Key_Count__c == MCEILING(ccrz__OriginalQuantity__c))
||
(Tool_Instance_Count__c == 0 &amp;&amp; Basic_Tool_Instance_Key_Count__c==0 &amp;&amp; IsRevokeLicenseSucess__c &amp;&amp; CancelLicenseAPICalled__c &amp;&amp; (OSM_SW_Revoked_Basic_Key_Count__c != MCEILING(ccrz__OriginalQuantity__c) || OSM_SW_Non_Insite_OSM_Product__c) &amp;&amp; OSM_SW_Revoked_Functional_Key_Count__c != MCEILING(ccrz__OriginalQuantity__c))
||
(Tool_Instance_Count__c == 0 &amp;&amp; Basic_Tool_Instance_Key_Count__c==0 &amp;&amp; IsRevokeLicenseSucess__c &amp;&amp; CancelLicenseAPICalled__c)
),

false, true)



,false)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is OMS Revoke and Cancel Not Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_Refund_FSD_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Refund FSD Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_credit_memo_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is credit memo Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_without_Coterm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is without Coterm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Non_Insite_OSM_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Insite OSM Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Product_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Link</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Order Items (Product Link)</relationshipLabel>
        <relationshipName>CC_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Product_Type__c</fullName>
        <formula>TEXT(ccrz__Product__r.ccrz__ProductType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Revoked_Basic_Key_Count__c</fullName>
        <label>Revoked Basic Key Count</label>
        <summaryFilterItems>
            <field>OSM_Order_Item_License__c.Status__c</field>
            <operation>equals</operation>
            <value>Revoked, Revoked/ReIssue</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OSM_Order_Item_License__c.Tool_Instance_Key__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OSM_Order_Item_License__c.Type__c</field>
            <operation>equals</operation>
            <value>Basic</value>
        </summaryFilterItems>
        <summaryForeignKey>OSM_Order_Item_License__c.CC_Order_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Revoked_Functional_Key_Count__c</fullName>
        <label>Revoked Functional Key Count</label>
        <summaryFilterItems>
            <field>OSM_Order_Item_License__c.Status__c</field>
            <operation>equals</operation>
            <value>Revoked/ReIssue, Revoked</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OSM_Order_Item_License__c.Tool_Instance_Key__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OSM_Order_Item_License__c.Type__c</field>
            <operation>equals</operation>
            <value>Functional</value>
        </summaryFilterItems>
        <summaryForeignKey>OSM_Order_Item_License__c.CC_Order_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSM_SW_SubProd_term_length__c</fullName>
        <label>SubProd term length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Subsc_Qty_Reduce_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Subscription Quantity Reduce Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSM_Tool_Instance_Key__c</fullName>
        <label>Tool Instance Key</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderItemConfirmationMailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OrderItemConfirmationMailSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderItem_Cancellation_Date__c</fullName>
        <label>OrderItem Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Dn_Price__c</fullName>
        <label>Original Dn Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Price_without_Discount__c</fullName>
        <formula>ccrz__Price__c * MCEILING(ccrz__OriginalQuantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Price without Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Sales_Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Sales Order Item</label>
        <referenceTo>ccrz__E_OrderItem__c</referenceTo>
        <relationshipLabel>CC Order Items (Original Sales Order Item)</relationshipLabel>
        <relationshipName>CC_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postcancelavailcopies__c</fullName>
        <label>RemainingCopies</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <formula>ccrz__Product__r.ccrz__SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reissued_OR_Revoked_Product_Name__c</fullName>
        <label>Reissued OR Revoked Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Lisences__c</fullName>
        <formula>IF(CONTAINS($Label.SES_OMSCreateOrder_SubscriptionProduct_List,  ccrz__Product__r.ccrz__SKU__c ) ,

IF(CONTAINS($Label.SES_OMSCreateOrder_SubscriptionProduct_List_AddOns, ccrz__Product__r.ccrz__SKU__c),

IF(Number_of_Bundles__c &gt; 0,(MCEILING(ccrz__OriginalQuantity__c)*Number_of_Bundles__c ) - (Tool_Instance_Count__c+OSM_SW_Revoked_Functional_Key_Count__c), MCEILING(ccrz__OriginalQuantity__c) - (Tool_Instance_Count__c+OSM_SW_Revoked_Functional_Key_Count__c)), IF(CONTAINS($Label.OMS_ProductList_NonInsite,ccrz__Product__r.ccrz__SKU__c),Number_of_Bundles__c - (Tool_Instance_Count__c+OSM_SW_Revoked_Functional_Key_Count__c),MCEILING(ccrz__OriginalQuantity__c)-(Tool_Instance_Count__c+OSM_SW_Revoked_Functional_Key_Count__c)))
,
Number_of_Bundles__c - (Tool_Instance_Count__c+OSM_SW_Revoked_Functional_Key_Count__c))

/*IF(CONTAINS($Label.SES_OMSCreateOrder_SubscriptionProduct_List, ccrz__Product_Name__c) , MCEILING(ccrz__OriginalQuantity__c)  -  (Tool_Instance_Count__c+OSM_SW_Revoked_Functional_Key_Count__c) ,   Number_of_Bundles__c -  (Tool_Instance_Count__c+OSM_SW_Revoked_Functional_Key_Count__c))*/</formula>
        <label>Remaining Lisences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revocation_Status__c</fullName>
        <label>Revocation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Revoke Initiated</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tool_Instance_Count__c</fullName>
        <label>Functional Tool Instance Count</label>
        <summaryFilterItems>
            <field>OSM_Order_Item_License__c.Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OSM_Order_Item_License__c.Tool_Instance_Key__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OSM_Order_Item_License__c.Type__c</field>
            <operation>equals</operation>
            <value>Functional</value>
        </summaryFilterItems>
        <summaryForeignKey>OSM_Order_Item_License__c.CC_Order_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tool_Instance_Key_Count__c</fullName>
        <label>Tool Instance Key Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tool_Instance_Key__c</fullName>
        <label>Tool Instance Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Refund_Amount__c</fullName>
        <formula>ccrz__ItemTotal__c  +  Vertex_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <formula>ccrz__Order__r.ccrz__User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VertexOrderItemCall__c</fullName>
        <defaultValue>true</defaultValue>
        <label>VertexOrderItemCall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vertex_Tax__c</fullName>
        <label>Vertex Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__AbsoluteDiscount__c</fullName>
        <description>When a coupon has been applied to the order this field contains the discount amount applied with that coupon. This field is for reference only and is not used in calculations.</description>
        <label>Absolute Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__AdjustmentAmount__c</fullName>
        <description>Pricing adjustment amount applied to this line. This field is normally set when the pricing extension adjusts individual line amounts.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__AvailabilityMessage__c</fullName>
        <description>Availability message as carried through from the product at the time the item was placed in the cart.</description>
        <label>Availability Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If a product was placed into a cart in the context of viewing a category this contains the reference to that category.</description>
        <label>Category</label>
        <referenceTo>ccrz__E_Category__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>E_OrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Comments__c</fullName>
        <description>Cart line comments as applied to this item.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Coupon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When a coupon has been applied to the order this field contains a reference to that coupon.</description>
        <label>Coupon</label>
        <referenceTo>ccrz__E_Coupon__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>E_OrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__DisplayProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When this line refers to a product that is part of an aggregate product this field contains a reference to the parent aggregate product.</description>
        <label>Display Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Order Items (Display Product)</relationshipLabel>
        <relationshipName>CC_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ExtName__c</fullName>
        <description>Defines a display Name to be used instead of the referenced Product Name for display in the cart/order.</description>
        <label>External Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ExtSKU__c</fullName>
        <description>Defines a display SKU to be used instead of the referenced Product SKU for display in the cart/order.</description>
        <label>External SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Is_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True or false value indicating whether or not this order item is a subscription.</description>
        <inlineHelpText>True or false value indicating whether or not this order item is a subscription.</inlineHelpText>
        <label>Is Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__ItemLabel__c</fullName>
        <description>Deprecated</description>
        <label>Item Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ItemStatus__c</fullName>
        <description>Reserved for future use.</description>
        <label>Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Pre-Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ItemTotal__c</fullName>
        <description>AdjustmentAmount__c + SubAmount__c</description>
        <formula>ccrz__AdjustmentAmount__c  +  ccrz__SubAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>